# ezproject1

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHIVE_EXTRACTION_PLAN.md  CLEANUP_REPORT.md  IMPROVED_NOTION_GUIDE.md  LICENSE  MISTAKES.md  README.md  README_SCHEMA_SYSTEM.md  REFACTORING_ACTION_PLAN.md  REFACTORING_ANALYSIS.md  REFACTORING_REPORT.md  analyze_ideas_cli.py  analyze_ideas_via_mcp.py  audit_notion_guests.py  auto_setup_system.py  cards_ocr_texts.json  cards_ocr_texts_yandex.json  check_arsentiy_in_tasks_mcp.py  check_arsentiy_mcp_correct.py  check_in_progress_tasks.py  check_notion_tasks.py  check_notion_token.py  check_notion_users.py  check_users.py  checklist_automation_system.py  cloudflare_cover_updater.py  cloudflare_webhook_worker.js  cost_monitor_deepseek.py  costs_history.json  create_figma_cover_material.py  create_kpi_formulas.py  create_lightshot_material_working.py  create_simple_working_formula_final.py  create_single_material.py  create_subtask_for_any_task.py  create_subtask_via_mcp.py  create_yandex_disk_material_final.py  debug_assignee_structure.py  (+96 more)
.Life/: .cursorrules  AGENT_TEAM_ACTION_PLAN.md  AGENT_TEAM_WATCH_APP_PLAN.md  AI_ORCHESTRATION_PRACTICE.md  ANDROID_APP_SUMMARY.md  BLENDER_INTEGRATION_GUIDE.md  BLENDER_SETUP_GUIDE.md  CURSOR_OPTIMIZATION_STRATEGY.md  Dockerfile  INSTALLATION_GUIDE_COMPLETE.md  INSTALLATION_STEPS.md  LOCAL_LLM_ARCHITECTURE.md  LOCAL_LLM_SETUP_GUIDE.md  MASTER_AGENT_GUIDE.md  PERSONAL_DEVELOPMENT_STRATEGY.md  PERSONAL_LLM_ROADMAP.md  PROJECT_STRATEGY_SUMMARY.md  QUICK_START_GUIDE.md  README.md  (+65 more)
(+481 files in other folders)
